syntax = "proto3";

option go_package = "sokoide.com/grpc/hello";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc Slow (SlowRequest) returns (SlowReply) {}
  rpc Push (PushRequest) returns (PushReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message SlowRequest {
 int64  ms = 1;
}

message SlowReply {
  string message = 1;
}

message PushRequest {
  string data = 1;
}

message PushReply {
  string message = 1;
}

